Refactor MouseAutomationAdvice to prevent recursion during event injection and update AutomationOverlay to ensure mouse events are consumed correctly